chore(gitignore): exclude macOS system files (.DS_Store, Spotlight)

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,11 @@ Cargo.lock
 
 # logs
 logs/
+
+# macOS temporary files
+.DS_Store
+.AppleDouble
+.LSOverride
+Spotlight-V100/
+.VolumeIcon.icns
+.Trashes
