--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,14 @@ edition = "2024"
 
 [dependencies]
 teloxide = { version = "0.13.0", features = ["macros", "ctrlc_handler"] }
+reqwest = { version = "0.12", default-features = false, features = [
+    "http2",
+    "rustls-tls",
+    "rustls-tls-native-roots",
+    "json",
+    "gzip",
+] }
+serde_json = "1.0.140"
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1", features = ["derive"] }
 toml = "0.8.20"
