--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 chrono = "0.4"
 colored = "3.0.0"
+indoc = "2.0.6"
 once_cell = "1.19.0"
 reqwest = { version = "0.12.12", default-features = false, features = [
     "http2",
@@ -17,3 +18,4 @@ reqwest = { version = "0.12.12", default-features = false, features = [
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0.140"
 tokio = { version = "1", features = ["full"] }
+toml = "0.8.20"
