--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+async-trait = "0.1.87"
 chrono = "0.4"
 colored = "3.0.0"
 indoc = "2.0.6"
@@ -17,5 +18,6 @@ reqwest = { version = "0.12.12", default-features = false, features = [
 ] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0.140"
+sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
 tokio = { version = "1", features = ["full"] }
 toml = "0.8.20"
