--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2024"
 async-trait = "0.1.87"
 chrono = "0.4"
 colored = "3.0.0"
-indoc = "2.0.6"
 once_cell = "1.19.0"
 reqwest = { version = "0.12.12", default-features = false, features = [
     "http2",
@@ -18,6 +17,11 @@ reqwest = { version = "0.12.12", default-features = false, features = [
 ] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0.140"
-sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
+sqlx = { version = "0.8.3", features = [
+    "sqlite",
+    "runtime-tokio-native-tls",
+    "macros",
+    "postgres"
+] }
 tokio = { version = "1", features = ["full"] }
 toml = "0.8.20"
