--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2024"
 [dependencies]
 async-trait = "0.1.87"
 chrono = "0.4"
-colored = "3.0.0"
+clia-local-offset = "0.1.0"
 once_cell = "1.19.0"
 reqwest = { version = "0.12.12", default-features = false, features = [
     "http2",
@@ -23,5 +23,17 @@ sqlx = { version = "0.8.3", features = [
     "macros",
     "postgres"
 ] }
+time = { version = "0.3.39", features = ["macros"] }
 tokio = { version = "1", features = ["full"] }
 toml = "0.8.20"
+tracing = "0.1.41"
+tracing-appender = "0.2.3"
+tracing-subscriber = { version = "0.3.19", features = [
+    "std",
+    "fmt",
+    "env-filter",
+    "tracing-log",
+    "time",
+    "local-time",
+    "json"
+] }
