--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2024"
 [dependencies]
 async-trait = "0.1.87"
 chrono = "0.4"
-clia-local-offset = "0.1.0"
 once_cell = "1.19.0"
 reqwest = { version = "0.12.12", default-features = false, features = [
     "http2",
@@ -23,7 +22,7 @@ sqlx = { version = "0.8.3", features = [
     "macros",
     "postgres"
 ] }
-time = { version = "0.3.39", features = ["macros"] }
+time = { version = "0.3.39", features = ["macros", "local-offset"] }
 tokio = { version = "1", features = ["full"] }
 toml = "0.8.20"
 tracing = "0.1.41"
