--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,11 @@ async-trait = "0.1.87"
 chrono = "0.4"
 once_cell = "1.19.0"
 reqwest = { version = "0.12.12", default-features = false, features = [
+    "gzip",
     "http2",
+    "json",
     "rustls-tls",
     "rustls-tls-native-roots",
-    "json",
-    "gzip",
 ] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0.140"
@@ -36,3 +36,4 @@ tracing-subscriber = { version = "0.3.19", features = [
     "local-time",
     "json"
 ] }
+hyper = "1.6.0"
