chore(database): remove old database code in preparation for rbatis integration

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,24 +6,26 @@ edition = "2024"
 [dependencies]
 async-trait = "0.1.87"
 chrono = "0.4"
-once_cell = "1.19.0"
-reqwest = { version = "0.12.12", default-features = false, features = [
+fast_log = "1.7.6"
+log = "0.4.26"
+once_cell = "1.21.1"
+rbs = { version = "4.5.25"}
+rbatis = { version = "4.5.50"}
+rbdc-mysql = { version = "4.5.17", optional = true }
+rbdc-sqlite = { version = "4.5.7", optional = true }
+rbdc-pg = { version = "4.5.17", optional = true }
+refinery = "0.8.16"
+reqwest = { version = "0.12.14", default-features = false, features = [
     "gzip",
     "http2",
     "json",
     "rustls-tls",
     "rustls-tls-native-roots",
 ] }
-serde = { version = "1", features = ["derive"] }
+serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
-sqlx = { version = "0.8.3", features = [
-    "sqlite",
-    "runtime-tokio-native-tls",
-    "macros",
-    "postgres"
-] }
 time = { version = "0.3.39", features = ["macros", "local-offset"] }
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1.44.1", features = ["full"] }
 toml = "0.8.20"
 tracing = "0.1.41"
 tracing-appender = "0.2.3"
